--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1138,8 +1138,10 @@ body {
 
 .xo-box2 img {
   width: 100%;
-  height: 100%;
-
+  height: 200px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
   object-fit: cover;
   padding: 8px;
 }
